--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
   "scripts": {
     "server":"nodemon server/server.js",
-    "client":"npm start --prefix client",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently  \"npm run server\"  \"npm run client\" "
+    "client":"npm start --prefix client", 
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,5 +17,19 @@
   "bugs": {
     "url": "https://github.com/yagnesh16697/flickbase/issues"
   },
-  "homepage": "https://github.com/yagnesh16697/flickbase#readme"
+  "homepage": "https://github.com/yagnesh16697/flickbase#readme",
+  "dependencies": {
+    "accesscontrol": "^2.2.1",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.14",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.8",
+    "mongoose-aggregate-paginate-v2": "^1.0.42",
+    "nodemailer": "^6.4.17",
+    "validator": "^13.5.2"
+  }
 }
